--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -7,17 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Document</title>
+    <script type="text/javascript" src="../script/main.js"></script>
 </head>
 
 <body>
 
     <ul class="menu-bar">
-        <li>Spotify playlist</li>
-        <li>Spotify song</li>
-        <li>Youtube playlist</li>
-        <li>Youtube vedio</li>
+        <li type="button" onclick="splist(1)">Spotify playlist</li>
+        <li type="button" onclick="splist(2)">Spotify song</li>
+        <li type="button" onclick="splist(3)">Youtube playlist</li>
+        <li type="button" onclick="splist(4)">Youtube vedio</li>
 
     </ul>
+    <div class="box">
+
+        <form action="">
+            <div class="inputBox">
+                <input type="text" name="" required="">
+                <label for="" id="sp-list" style="display:block">Spotify Playlist Url</label>
+                <label for="" id="sp-song" style="display:none">Spotify Song Url</label>
+                <label for="" id="yt-list" style="display:none">Youtube Playlist Url</label>
+                <label for="" id="yt-song" style="display:none">Youtube Song Url</label>
+            </div>
+            <input type="submit" name="" value="Submit">
+        </form>
+    </div>
 
 </body>
 
